# cppcoro

./: CMakeLists.txt
include/cppcoro/: async_auto_reset_event.hpp  async_generator.hpp  async_manual_reset_event.hpp  async_mutex.hpp  async_scope.hpp  config.hpp  coroutine.hpp  file_read_operation.hpp  file_write_operation.hpp  fmap.hpp  generator.hpp  inline_scheduler.hpp  io_service.hpp  recursive_generator.hpp  round_robin_scheduler.hpp  sequence_barrier.hpp  shared_task.hpp  single_consumer_async_auto_reset_event.hpp  single_consumer_event.hpp  static_thread_pool.hpp  task.hpp
include/cppcoro/detail/: is_awaiter.hpp  sync_wait_task.hpp  when_all_counter.hpp  when_all_ready_awaitable.hpp  when_all_task.hpp  win32_overlapped_operation.hpp
include/cppcoro/net/: socket_accept_operation.hpp
lib/: CMakeLists.txt  file.cpp  io_service.cpp  read_only_file.cpp
test/: CMakeLists.txt  when_all_tests.cpp
